Substituted overlay images with single pictures, alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,8 @@
     --headings-font-color: #F2E8CF;
     --pergamena-color: #E9E1DA;
     --pino-color: #92C1A0;
-    --foglia-color: #B9C9B4;
+    --foglia-color: #d5ddd2;
+    /*--foglia-color: #B9C9B4; */
     --crema-color: #F2E8CF;
     --moro-color: #440500;
     --rose-color: #D8B9A5;
@@ -191,7 +192,6 @@ s
 
 .giorno-par {
     max-width: 80%;
-    justify-self: center;
 }
 
 .giorno-container {
@@ -206,6 +206,7 @@ s
     text-transform: uppercase;
     font-weight: bold;
     margin-top: 1.5em;
+    padding: 0 30px 0 0;
  }
 
 .form-container {
@@ -456,6 +457,11 @@ nav a:hover, nav li.active a {
     margin-bottom: 30px;
 }
 
+.e-poi-collage {
+    width: 100%;
+    height: auto;
+}
+
 footer .contact-box {
     background-color: var(--secondary-color);
     padding: 30px 120px;
@@ -526,7 +532,7 @@ footer .social-links a:hover {
     margin-top: 5em;
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: left;
  }
 
  /* .buttons a {
@@ -726,6 +732,10 @@ footer .social-links a:hover {
             visibility: visible;
         }
 
+        .giorno-par {
+            justify-self: center;
+        }
+
         .footer-giorno {
             position: relative;
             font-size: 12px;
@@ -770,10 +780,6 @@ footer .social-links a:hover {
             max-width: 30%;
         }
 
-        .e-poi-text {
-            padding-top: 350px;
-        }
-
         .max-width-80 {
             max-width: 80%;
         }
@@ -792,6 +798,7 @@ footer .social-links a:hover {
 
         .font-poi {
             font-size: 16px;
+            margin-top: 0 !important;
         }
 
         .footer-poi {
@@ -808,6 +815,10 @@ footer .social-links a:hover {
 
         .width-e-poi {
             margin: 0;
+        }
+
+        .e-poi-collage {
+            max-width: 100%;
         }
     }
 }
